= ActiveMerchant CHANGELOG

== HEAD
* Make behavior of nil CC numbers more consistent [guaguasi] #3010
* Moneris: Adds Credential on File logic [deedeelavinder] #3042
* Adyen: Return AVS and CVC Result [nfarve] #3044

== Version 1.86.0 (October 26, 2018)
* UsaEpayTransaction: Support UMcheckformat option for echecks [dtykocki] #3002
* Global Collect: handle internal server errors [molbrown] #3005
* Barclaycard Smartpay: allow third-party payouts for credits [bpollack] #3009
* RuboCop: AlignHash [nfarve] #3004
* Beanstream: Switch `recurringPayment` flag from boolean to integer [dtykocki] #3011
* Update Swipe HQ endpoint [bdewater] #3013
* Braintree: Adds device_data [deedeelavinder] #3012
* Payflow Express: Add phone to returned Response [filipebarcos] #3003
* Authorize.Net: Pass some level 3 fields [curiousepic] #3022
* Add state to the netbanx payload [Girardvjonathan] #3024
* Barclaycard Smartpay: Improves Error Handling [deedeelavinder] #3026
* Braintree: Fix passing phone-only billing address [curiousepic] #3025
* Litle: Capitalize check account type [curiousepic] #3028
* Braintree: Account for nil billing address fields [curiousepic] #3029
* Realex: Add verify [kheang] #3030
* Braintree: Actually account for nil address fields [curiousepic] #3032
* Credorax: allow sending submerchant ID (h3 parameter) [bpollack] #3040
* Worldpay: Pass stored credential option fields [curiousepic] #3041
* Paymentez: Supports phone field, does not send if empty [molbrown] #3043

== Version 1.85.0 (September 28, 2018)
* Authorize.Net: Support custom delimiter for cim [curiousepic] #3001

== Version 1.84.0 (September 27, 2018)
* PayU Latam: support partial captures [bpollack] #2974
* Braintree: Reflect correct test mode in Braintree responses [elfassy] #2980
* FirstPay: Expose error code [curiousepic] #2979
* Barclaycard Smartpay: Pass device_fingerprint when specified [dtykocki] #2981
* Komoju: remove no-longer-relevant sandbox URL [miyazawadegica] #2987